assets/scss/components/_counter-up.scss
/********** 
 20. Counter Up Section Styles
**********/
.counter-up {
  .section-header {
    padding: $base-padding * 2 0 $base-padding * 3.1;
    p {
      width: 80%;
      margin: 0 auto;
      @include media-breakpoint-down-xxl {
        width: 80%;
      }
      @include media-breakpoint-down-md {
        width: 100%;
        text-align: left;
      }
    }
  }
  &-wrapper {
    align-items: center;
    justify-content: space-between;
    text-align: center;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-template-rows: repeat(1, 1fr);
    @include media-breakpoint-down-xxl {
      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
    }
    @include media-breakpoint-down-xl {
      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
    }
    @include media-breakpoint-down-lg {
      grid-template-rows: repeat(2, 1fr);
      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
    }
    @include media-breakpoint-down-md {
      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    }
    @include media-breakpoint-down-sm {
      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
    }

    .counter,
    .percent {
      color: $color-header;
      font-family: $font-primary;
      font-size: $base-font-size * 4;
      font-weight: 700;
      line-height: 1.31;
      font-variant: lining-nums;
      @include media-breakpoint-down-xxl {
        font-size: $base-font-size * 3;
      }
      @include media-breakpoint-down-sm {
        font-size: $base-font-size * 2.5;
      }
    }
  }
  &-content {
    position: relative;
    @include media-breakpoint-down-lg {
      &:nth-child(2),
      &:nth-child(4) {
        .counter-up-content-item {
          border-right: 0;
        }
      }
    }

    &-item {
      border-top: 1px solid $color-primary-light;
      border-right: 1px solid $color-primary-light;
      padding: $base-padding * 2.6 $base-padding * 2 0;
      @include media-breakpoint-down-xxl {
        padding: $base-padding * 2 $base-padding * 2 0;
      }
      @include media-breakpoint-down-xl {
        padding: $base-padding * 2 $base-padding * 1 $base-padding * 1.9;
      }
      @include media-breakpoint-down-sm {
        padding: $base-padding * 2 $base-padding * 0 $base-padding * 1.9;
      }

      p {
        color: $color-header;
        font-size: $base-font-size * 1.35;
        margin-bottom: 0;
        @include media-breakpoint-down-xxl {
          font-size: $base-font-size * 1;
        }
        @include media-breakpoint-down-sm {
          padding: $base-padding * 0 $base-padding * 2 $base-padding * 0;
        }
      }
    }
  }
  //start Counter Up-two Section Styles
  &-two {
    background: $color-primary-light;
    .counter-up {
      &-content {
        &-item {
          border-top: 1px solid $color-white;
          border-right: 1px solid $color-white;
        }
      }
    }
  }
}

